--- a/Client/FishX/Base.lproj/Main.storyboard
+++ b/Client/FishX/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Item View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ItemViewController" customModule="FishX" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,88 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ZSe-5C-Ymy">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ItemCell" id="rHD-8w-heU" customClass="ItemCell" customModule="FishX" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rHD-8w-heU" id="ZKk-a9-ynS">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nnc-TN-9Pc">
+                                                    <rect key="frame" x="8" y="8" width="60" height="83"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="60" id="Mzb-lv-ek6"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w6L-IC-qKc">
+                                                    <rect key="frame" x="76" y="8" width="291" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3co-8H-D9V">
+                                                    <rect key="frame" x="76" y="75" width="291" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rwf-jt-Rmk">
+                                                    <rect key="frame" x="76" y="34.5" width="100" height="30"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="Ejk-PA-gjv"/>
+                                                        <constraint firstAttribute="width" constant="100" id="g8d-kw-pXt"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="3co-8H-D9V" firstAttribute="leading" secondItem="Nnc-TN-9Pc" secondAttribute="trailing" constant="8" id="Bah-yo-xFf"/>
+                                                <constraint firstItem="w6L-IC-qKc" firstAttribute="leading" secondItem="Nnc-TN-9Pc" secondAttribute="trailing" constant="8" id="CSE-3A-dqr"/>
+                                                <constraint firstItem="Rwf-jt-Rmk" firstAttribute="leading" secondItem="Nnc-TN-9Pc" secondAttribute="trailing" constant="8" id="JHf-Eg-qv5"/>
+                                                <constraint firstItem="Nnc-TN-9Pc" firstAttribute="top" secondItem="ZKk-a9-ynS" secondAttribute="top" constant="8" id="NXX-k8-Dyb"/>
+                                                <constraint firstItem="w6L-IC-qKc" firstAttribute="top" secondItem="Nnc-TN-9Pc" secondAttribute="top" id="Pub-MY-KN8"/>
+                                                <constraint firstAttribute="bottom" secondItem="Nnc-TN-9Pc" secondAttribute="bottom" constant="8" id="aj8-SX-Bhp"/>
+                                                <constraint firstAttribute="trailing" secondItem="w6L-IC-qKc" secondAttribute="trailing" constant="8" id="sZU-J6-Xfy"/>
+                                                <constraint firstItem="3co-8H-D9V" firstAttribute="bottom" secondItem="Nnc-TN-9Pc" secondAttribute="bottom" id="uDr-ij-o2B"/>
+                                                <constraint firstAttribute="trailing" secondItem="3co-8H-D9V" secondAttribute="trailing" constant="8" id="xgl-yw-3Bk"/>
+                                                <constraint firstItem="Nnc-TN-9Pc" firstAttribute="leading" secondItem="ZKk-a9-ynS" secondAttribute="leading" constant="8" id="xkF-BS-gx1"/>
+                                                <constraint firstItem="Rwf-jt-Rmk" firstAttribute="centerY" secondItem="Nnc-TN-9Pc" secondAttribute="centerY" id="zyB-xZ-BPQ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="imageViewIcon" destination="Nnc-TN-9Pc" id="zZI-lu-aIY"/>
+                                            <outlet property="labelDetail" destination="3co-8H-D9V" id="RMj-Yp-Coa"/>
+                                            <outlet property="labelTitle" destination="w6L-IC-qKc" id="HUx-5x-Bc4"/>
+                                            <outlet property="rating" destination="Rwf-jt-Rmk" id="YIi-Wi-bsM"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="yKR-uk-axE"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="5OY-4v-F6s"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ZSe-5C-Ymy" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="7Qp-2T-1Rv"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ZSe-5C-Ymy" secondAttribute="bottom" id="JVE-pF-NgB"/>
+                            <constraint firstAttribute="trailing" secondItem="ZSe-5C-Ymy" secondAttribute="trailing" id="i4B-gi-BwM"/>
+                            <constraint firstItem="ZSe-5C-Ymy" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="tN1-Of-Bgb"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="itemView" destination="ZSe-5C-Ymy" id="9Dk-DY-c47"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="37.331334332833585"/>
         </scene>
     </scenes>
 </document>
